Fixing aspect-ration on mobile and adding bg-ivory

--- a/themes/RogersHood-theme/assets/css/blocks/about-us.css
+++ b/themes/RogersHood-theme/assets/css/blocks/about-us.css
@@ -1,7 +1,3 @@
-.about-us {
-	background: #fcfbfb;
-}
-
 @media (--bp-medium) {
 	.about-us__content {
 		text-align: left;
