--- a/themes/RogersHood-theme/assets/css/blocks/e-books-full-and-text.css
+++ b/themes/RogersHood-theme/assets/css/blocks/e-books-full-and-text.css
@@ -1,7 +1,3 @@
-.e-books-full-and-text {
-	background: #fcfbfb;
-}
-
 .e-books-full-and-text::before {
 	content: url("../svg/pattern-leaves-e-books-full-and-text.svg");
 	position: absolute;
